# OZ_codingSchool_assignment

./: README.md
database_assignment/day17/: chapter14_20.sql
database_assignment/day19/: pyproject.toml  yes24_crawling.ipynb
day10/: task_1.ipynb  task_4.ipynb  task_5.ipynb  task_6.ipynb  task_9.ipynb
day10/animals/: birds.py  mammals.py
day11/: task_4.ipynb  task_5.ipynb  task_6.ipynb
day11/banking_system/: main.py
day15/: chapter01_06.ipynb
day16/: chapter07_13.ipynb  fishbread.sql
day18/airbnb/: pyproject.toml
day18/airbnb/src/: settings.py
day18/airbnb/src/utils/: airbnb_dummy.py
day18/chapter22_23/: read.sql  update.sql
day1_2/: my_form.html
day2_1/: my_profile.css  my_profile.html
day2_2/: 00-baseTemplate.html  my_chat.css  my_chat.html
day2_3/: user.html
day3_1/: monster.html
day4/: Ch04_task(code).ipynb
day5/: Chapter0508_과제.ipynb
day6/: Chapter0913_과제.ipynb
day6/validation/: Validator.py  __init__.py
day7/bbong_company/: main.py
day8/: Chapter1720_과제.ipynb  붕어빵_판매데이터.txt
day9/: Ch21_task.ipynb  Ch23_task.ipynb  Ch24_task.ipynb  Ch25_task.ipynb  Ch27_task.ipynb  Ch28_task.ipynb  Ch31_task.ipynb  Ch32_task.ipynb  Challenge_task.ipynb
develop_project_bbong_company/bbong_company/: FishShapedBun.py  FishShapedBunManageSystem.py  Order.py
develop_project_hangman_game/hangman/: pyqt5_설치  start.sh
linux_assignment/linux_day_1/: linux_0113.ipynb
linux_assignment/linux_day_2/: linux_1426.ipynb
mini_project_1/html/: index.html
mini_project_2/: Mini_Project_Hangman.ipynb
python_assignment/day10/: mymath.py  (+5 more)
(+74 files in other folders)
